--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "firebase": "^11.9.0",
     "html2pdf.js": "^0.10.3",
     "jspdf": "^2.5.1",
+    "jspdf-autotable": "^5.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0"
